--- a/imgui.ini
+++ b/imgui.ini
@@ -48,7 +48,7 @@ Collapsed=0
 
 [Window][Config]
 Pos=0,241
-Size=583,388
+Size=435,388
 Collapsed=0
 DockId=0x00000028,0
 
@@ -165,7 +165,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,631
-Size=583,226
+Size=435,368
 Collapsed=0
 DockId=0x00000025,0
 
@@ -192,34 +192,34 @@ Size=704,779
 Collapsed=0
 
 [Window][Compose Pass]
-Pos=585,635
-Size=938,782
+Pos=437,295
+Size=884,1122
 Collapsed=0
 DockId=0x00000023,0
 
 [Window][Gizmo Pass]
-Pos=0,631
-Size=583,226
+Pos=0,0
+Size=435,239
 Collapsed=0
-DockId=0x00000025,1
+DockId=0x00000027,1
 
 [Window][Gbuffer normal]
-Pos=585,0
-Size=937,633
+Pos=437,0
+Size=1101,293
 Collapsed=0
 DockId=0x0000001F,0
 
 [Window][Gbuffer depth]
 Pos=0,0
-Size=583,239
+Size=435,239
 Collapsed=0
 DockId=0x00000027,0
 
 [Window][Compute Gbuffer normal]
-Pos=1525,635
-Size=1035,782
+Pos=0,631
+Size=435,368
 Collapsed=0
-DockId=0x00000024,0
+DockId=0x00000025,1
 
 [Window][Render Pass]
 Pos=190,0
@@ -227,27 +227,33 @@ Size=322,512
 Collapsed=0
 
 [Window][Baking Pass]
-Pos=0,859
-Size=583,558
+Pos=0,1001
+Size=435,416
 Collapsed=0
 DockId=0x00000026,0
 
 [Window][G.I. Compute GBuffer Pass]
-Pos=1524,0
-Size=1036,633
+Pos=1540,0
+Size=1020,293
 Collapsed=0
 DockId=0x00000020,0
 
+[Window][Sample Counter]
+Pos=1323,295
+Size=1237,1122
+Collapsed=0
+DockId=0x00000024,0
+
 [Docking][Data]
 DockSpace                         ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=2560,1417 Split=X
-  DockNode                        ID=0x00000018 Parent=0x09EF459F SizeRef=583,1387 Split=Y Selected=0x18B8C0DE
+  DockNode                        ID=0x00000018 Parent=0x09EF459F SizeRef=435,1387 Split=Y Selected=0x18B8C0DE
     DockNode                      ID=0x0000001A Parent=0x00000018 SizeRef=1277,629 Split=Y Selected=0xD3262A4A
-      DockNode                    ID=0x00000027 Parent=0x0000001A SizeRef=583,239 Selected=0xAFC7D0D1
+      DockNode                    ID=0x00000027 Parent=0x0000001A SizeRef=583,239 Selected=0xCFB8D5A0
       DockNode                    ID=0x00000028 Parent=0x0000001A SizeRef=583,388 Selected=0xD3262A4A
     DockNode                      ID=0x0000001B Parent=0x00000018 SizeRef=1277,786 Split=Y Selected=0x18B8C0DE
-      DockNode                    ID=0x00000025 Parent=0x0000001B SizeRef=583,226 Selected=0x18B8C0DE
-      DockNode                    ID=0x00000026 Parent=0x0000001B SizeRef=583,558 Selected=0x8AAB593D
-  DockNode                        ID=0x00000019 Parent=0x09EF459F SizeRef=1975,1387 Split=Y
+      DockNode                    ID=0x00000025 Parent=0x0000001B SizeRef=583,368 Selected=0x519AB3AB
+      DockNode                    ID=0x00000026 Parent=0x0000001B SizeRef=583,416 Selected=0x8AAB593D
+  DockNode                        ID=0x00000019 Parent=0x09EF459F SizeRef=2123,1387 Split=Y
     DockNode                      ID=0x00000004 Parent=0x00000019 SizeRef=1920,126 Split=X Selected=0x2B5F260E
       DockNode                    ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
       DockNode                    ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
@@ -269,12 +275,12 @@ DockSpace                         ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=2
                 DockNode          ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=Y Selected=0x961573DF
                   DockNode        ID=0x00000003 Parent=0x00000008 SizeRef=224,256 Split=Y
                     DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=228,256 Split=Y Selected=0x519AB3AB
-                      DockNode    ID=0x00000021 Parent=0x00000001 SizeRef=1615,633 Split=X Selected=0xE8D97491
-                        DockNode  ID=0x0000001F Parent=0x00000021 SizeRef=937,633 Selected=0xE46A3796
-                        DockNode  ID=0x00000020 Parent=0x00000021 SizeRef=1036,633 Selected=0xE8D97491
-                      DockNode    ID=0x00000022 Parent=0x00000001 SizeRef=1615,782 Split=X Selected=0x519AB3AB
-                        DockNode  ID=0x00000023 Parent=0x00000022 SizeRef=938,782 Selected=0x290BE0CE
-                        DockNode  ID=0x00000024 Parent=0x00000022 SizeRef=1035,782 CentralNode=1 Selected=0x519AB3AB
+                      DockNode    ID=0x00000021 Parent=0x00000001 SizeRef=1615,293 Split=X Selected=0xE8D97491
+                        DockNode  ID=0x0000001F Parent=0x00000021 SizeRef=1101,633 Selected=0xE46A3796
+                        DockNode  ID=0x00000020 Parent=0x00000021 SizeRef=1020,633 Selected=0xE8D97491
+                      DockNode    ID=0x00000022 Parent=0x00000001 SizeRef=1615,1122 Split=X Selected=0x519AB3AB
+                        DockNode  ID=0x00000023 Parent=0x00000022 SizeRef=884,782 Selected=0x290BE0CE
+                        DockNode  ID=0x00000024 Parent=0x00000022 SizeRef=1237,782 CentralNode=1 Selected=0xA6C19B96
                     DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=228,254 Selected=0x46B5E99C
                   DockNode        ID=0x0000001E Parent=0x00000008 SizeRef=224,254 Selected=0x593C5C9B
                 DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
