--- a/imgui.ini
+++ b/imgui.ini
@@ -192,10 +192,10 @@ Size=704,779
 Collapsed=0
 
 [Window][Compose Pass]
-Pos=0,1001
-Size=604,416
+Pos=606,0
+Size=1954,1417
 Collapsed=0
-DockId=0x00000026,1
+DockId=0x00000001,1
 
 [Window][Gizmo Pass]
 Pos=0,0
@@ -219,7 +219,7 @@ DockId=0x00000027,0
 Pos=0,1001
 Size=604,416
 Collapsed=0
-DockId=0x00000026,2
+DockId=0x00000026,1
 
 [Window][Render Pass]
 Pos=843,0
@@ -253,7 +253,7 @@ DockSpace                     ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=2560,
       DockNode                ID=0x00000028 Parent=0x0000001A SizeRef=583,506 Selected=0xD3262A4A
     DockNode                  ID=0x0000001B Parent=0x00000018 SizeRef=1277,794 Split=Y Selected=0x18B8C0DE
       DockNode                ID=0x00000025 Parent=0x0000001B SizeRef=583,376 Selected=0xA6C19B96
-      DockNode                ID=0x00000026 Parent=0x0000001B SizeRef=583,416 Selected=0x290BE0CE
+      DockNode                ID=0x00000026 Parent=0x0000001B SizeRef=583,416 Selected=0x519AB3AB
   DockNode                    ID=0x00000019 Parent=0x09EF459F SizeRef=1954,1387 Split=Y
     DockNode                  ID=0x00000004 Parent=0x00000019 SizeRef=1920,126 Split=X Selected=0x2B5F260E
       DockNode                ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
