--- a/3rdparty/meshoptimizer/.github/workflows/build.yml
+++ b/3rdparty/meshoptimizer/.github/workflows/build.yml
@@ -59,14 +59,11 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/setup-node@v1
       with:
-        node-version: '13.x'
+        node-version: '14.6'
     - name: test
       run: node js/meshopt_decoder.test.js
     - name: test simd
-      run: |
-        export CANARY=canary20200504008edc4c19
-        curl https://nodejs.org/download/v8-canary/v15.0.0-v8-$CANARY/node-v15.0.0-v8-$CANARY-linux-x64.tar.gz | tar -xz
-        node-v15.0.0-v8-$CANARY-linux-x64/bin/node --experimental-wasm-simd js/meshopt_decoder.test.js
+      run: node --experimental-wasm-simd js/meshopt_decoder.test.js
 
   gltfpack:
     runs-on: ubuntu-latest
@@ -87,7 +84,43 @@ jobs:
         curl -sL $VALIDATOR | tar xJ
         find glTF-Sample-Models/2.0/ -name *.gltfpack.gltf | xargs -L 1 ./gltf_validator -r -a
       env:
-        VALIDATOR: https://github.com/KhronosGroup/glTF-Validator/releases/download/2.0.0-dev.3.2/gltf_validator-2.0.0-dev.3.2-linux64.tar.xz
+        VALIDATOR: https://github.com/KhronosGroup/glTF-Validator/releases/download/2.0.0-dev.3.3/gltf_validator-2.0.0-dev.3.3-linux64.tar.xz
+
+  gltfpackjs:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '14.x'
+    - name: install wasi
+      run: |
+        curl -sL https://github.com/WebAssembly/wasi-sdk/releases/download/wasi-sdk-$VERSION/wasi-sdk-$VERSION.0-linux.tar.gz | tar xz
+        curl -sL https://github.com/WebAssembly/wasi-sdk/releases/download/wasi-sdk-$VERSION/libclang_rt.builtins-wasm32-wasi-$VERSION.0.tar.gz | tar xz -C wasi-sdk-$VERSION.0
+        curl -sL https://github.com/WebAssembly/wasi-sdk/releases/download/wasi-sdk-$VERSION/wasi-sysroot-$VERSION.0.tar.gz | tar xz
+        mv wasi-sdk-$VERSION.0 wasi-sdk
+      env:
+        VERSION: 12
+    - name: build
+      run: |
+        make -B WASMCC=wasi-sdk/bin/clang++ WASI_SDK=./wasi-sysroot gltf/library.wasm
+        make -B WASMCC=wasi-sdk/bin/clang++ WASI_SDK=./wasi-sysroot js/meshopt_decoder.js js/meshopt_decoder.module.js
+    - name: test
+      run: |
+        node gltf/cli.js -i demo/pirate.obj -o pirate.glb -v
+        node gltf/cli.js -i `pwd`/pirate.glb -o pirate-repack.glb -cc -v
+        wc -c pirate.glb pirate-repack.glb
+        node js/meshopt_decoder.test.js
+    - name: npm pack
+      run: cd gltf && npm pack
+    - uses: actions/upload-artifact@v2
+      with:
+        name: gltfpack-npm
+        path: gltf/gltfpack-*.tgz
+    - uses: actions/upload-artifact@v2
+      with:
+        name: meshopt_decoder
+        path: js/meshopt_decoder*.js
 
   arm64:
     runs-on: ubuntu-latest
