--- a/imgui.ini
+++ b/imgui.ini
@@ -47,10 +47,10 @@ Size=2560,1417
 Collapsed=0
 
 [Window][Config]
-Pos=0,115
-Size=604,506
+Pos=0,623
+Size=604,474
 Collapsed=0
-DockId=0x00000028,0
+DockId=0x00000025,0
 
 [Window][sw rasterization]
 Pos=662,557
@@ -164,10 +164,10 @@ Size=338,256
 Collapsed=0
 
 [Window][Scene]
-Pos=0,623
-Size=604,376
+Pos=0,330
+Size=604,291
 Collapsed=0
-DockId=0x00000025,0
+DockId=0x00000022,0
 
 [Window][Column row selection]
 Pos=0,283
@@ -192,93 +192,99 @@ Size=704,779
 Collapsed=0
 
 [Window][Compose Pass]
-Pos=606,0
-Size=1954,1417
+Pos=1582,0
+Size=978,707
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000026,0
 
 [Window][Gizmo Pass]
 Pos=0,0
-Size=604,113
+Size=604,328
 Collapsed=0
-DockId=0x00000027,1
+DockId=0x00000021,0
 
 [Window][Gbuffer normal]
 Pos=0,0
-Size=604,113
+Size=604,328
 Collapsed=0
-DockId=0x00000027,2
+DockId=0x00000021,1
 
 [Window][Gbuffer depth]
-Pos=0,0
-Size=604,113
+Pos=1582,709
+Size=978,708
 Collapsed=0
 DockId=0x00000027,0
 
 [Window][Compute Gbuffer normal]
-Pos=0,1001
-Size=604,416
+Pos=606,711
+Size=974,706
 Collapsed=0
-DockId=0x00000026,1
+DockId=0x00000024,0
 
 [Window][Render Pass]
-Pos=843,0
-Size=1717,1417
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Baking Pass]
-Pos=0,1001
-Size=604,416
-Collapsed=0
-DockId=0x00000026,0
-
-[Window][G.I. Compute GBuffer Pass]
 Pos=606,0
 Size=1954,1417
 Collapsed=0
 DockId=0x00000001,0
 
-[Window][Sample Counter]
-Pos=0,623
-Size=604,376
+[Window][Baking Pass]
+Pos=0,1099
+Size=604,318
 Collapsed=0
-DockId=0x00000025,1
+DockId=0x00000029,0
+
+[Window][G.I. Compute GBuffer Pass]
+Pos=606,0
+Size=974,709
+Collapsed=0
+DockId=0x00000023,0
+
+[Window][Sample Counter]
+Pos=0,1099
+Size=604,318
+Collapsed=0
+DockId=0x00000029,1
 
 [Docking][Data]
-DockSpace                     ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=2560,1417 Split=X
-  DockNode                    ID=0x00000018 Parent=0x09EF459F SizeRef=604,1387 Split=Y Selected=0x18B8C0DE
-    DockNode                  ID=0x0000001A Parent=0x00000018 SizeRef=1277,621 Split=Y Selected=0xD3262A4A
-      DockNode                ID=0x00000027 Parent=0x0000001A SizeRef=583,113 Selected=0xCFB8D5A0
-      DockNode                ID=0x00000028 Parent=0x0000001A SizeRef=583,506 Selected=0xD3262A4A
-    DockNode                  ID=0x0000001B Parent=0x00000018 SizeRef=1277,794 Split=Y Selected=0x18B8C0DE
-      DockNode                ID=0x00000025 Parent=0x0000001B SizeRef=583,376 Selected=0xA6C19B96
-      DockNode                ID=0x00000026 Parent=0x0000001B SizeRef=583,416 Selected=0x519AB3AB
-  DockNode                    ID=0x00000019 Parent=0x09EF459F SizeRef=1954,1387 Split=Y
-    DockNode                  ID=0x00000004 Parent=0x00000019 SizeRef=1920,126 Split=X Selected=0x2B5F260E
-      DockNode                ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
-      DockNode                ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
-    DockNode                  ID=0x00000005 Parent=0x00000019 SizeRef=1920,384 Split=X
-      DockNode                ID=0x00000016 Parent=0x00000005 SizeRef=307,1038 Selected=0xD3262A4A
-      DockNode                ID=0x00000017 Parent=0x00000005 SizeRef=203,1038 Split=Y
-        DockNode              ID=0x00000014 Parent=0x00000017 SizeRef=1920,794 Selected=0xCE70D424
-        DockNode              ID=0x00000015 Parent=0x00000017 SizeRef=1920,242 Split=X
-          DockNode            ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
-            DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=1920,804 Split=X Selected=0xD3262A4A
-              DockNode        ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
-                DockNode      ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0x93643EC0
-                  DockNode    ID=0x00000010 Parent=0x0000000E SizeRef=662,843 Selected=0x93643EC0
-                  DockNode    ID=0x00000011 Parent=0x0000000E SizeRef=689,843 Selected=0xC62906FD
-                DockNode      ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
-              DockNode        ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
-            DockNode          ID=0x0000000B Parent=0x00000012 SizeRef=1920,24 Split=X
-              DockNode        ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
-                DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=Y Selected=0x961573DF
-                  DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=224,256 Split=Y
-                    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=228,256 CentralNode=1 Selected=0xE8D97491
-                    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=228,254 Selected=0x46B5E99C
-                  DockNode    ID=0x0000001E Parent=0x00000008 SizeRef=224,254 Selected=0x593C5C9B
-                DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
-              DockNode        ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
-          DockNode            ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
+DockSpace                         ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=2560,1417 Split=X
+  DockNode                        ID=0x00000018 Parent=0x09EF459F SizeRef=604,1387 Split=Y Selected=0x18B8C0DE
+    DockNode                      ID=0x0000001A Parent=0x00000018 SizeRef=1277,621 Split=Y Selected=0xCFB8D5A0
+      DockNode                    ID=0x00000021 Parent=0x0000001A SizeRef=604,328 Selected=0xCFB8D5A0
+      DockNode                    ID=0x00000022 Parent=0x0000001A SizeRef=604,291 Selected=0x18B8C0DE
+    DockNode                      ID=0x0000001B Parent=0x00000018 SizeRef=1277,794 Split=Y Selected=0xD3262A4A
+      DockNode                    ID=0x00000025 Parent=0x0000001B SizeRef=604,474 Selected=0xD3262A4A
+      DockNode                    ID=0x00000029 Parent=0x0000001B SizeRef=604,318 Selected=0x8AAB593D
+  DockNode                        ID=0x00000019 Parent=0x09EF459F SizeRef=1954,1387 Split=Y
+    DockNode                      ID=0x00000004 Parent=0x00000019 SizeRef=1920,126 Split=X Selected=0x2B5F260E
+      DockNode                    ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
+      DockNode                    ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
+    DockNode                      ID=0x00000005 Parent=0x00000019 SizeRef=1920,384 Split=X
+      DockNode                    ID=0x00000016 Parent=0x00000005 SizeRef=307,1038 Selected=0xD3262A4A
+      DockNode                    ID=0x00000017 Parent=0x00000005 SizeRef=203,1038 Split=Y
+        DockNode                  ID=0x00000014 Parent=0x00000017 SizeRef=1920,794 Selected=0xCE70D424
+        DockNode                  ID=0x00000015 Parent=0x00000017 SizeRef=1920,242 Split=X
+          DockNode                ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
+            DockNode              ID=0x0000000A Parent=0x00000012 SizeRef=1920,804 Split=X Selected=0xD3262A4A
+              DockNode            ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
+                DockNode          ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0x93643EC0
+                  DockNode        ID=0x00000010 Parent=0x0000000E SizeRef=662,843 Selected=0x93643EC0
+                  DockNode        ID=0x00000011 Parent=0x0000000E SizeRef=689,843 Selected=0xC62906FD
+                DockNode          ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
+              DockNode            ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
+            DockNode              ID=0x0000000B Parent=0x00000012 SizeRef=1920,24 Split=X
+              DockNode            ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
+                DockNode          ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=Y Selected=0x961573DF
+                  DockNode        ID=0x00000003 Parent=0x00000008 SizeRef=224,256 Split=Y
+                    DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=228,256 Split=X Selected=0x290BE0CE
+                      DockNode    ID=0x0000001F Parent=0x00000001 SizeRef=974,1417 Split=Y Selected=0xE8D97491
+                        DockNode  ID=0x00000023 Parent=0x0000001F SizeRef=974,709 Selected=0xE8D97491
+                        DockNode  ID=0x00000024 Parent=0x0000001F SizeRef=974,706 Selected=0x519AB3AB
+                      DockNode    ID=0x00000020 Parent=0x00000001 SizeRef=978,1417 Split=Y Selected=0x290BE0CE
+                        DockNode  ID=0x00000026 Parent=0x00000020 SizeRef=978,707 CentralNode=1 Selected=0x290BE0CE
+                        DockNode  ID=0x00000027 Parent=0x00000020 SizeRef=978,708 Selected=0xAFC7D0D1
+                    DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=228,254 Selected=0x46B5E99C
+                  DockNode        ID=0x0000001E Parent=0x00000008 SizeRef=224,254 Selected=0x593C5C9B
+                DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
+              DockNode            ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
+          DockNode                ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
 
