--- a/imgui.ini
+++ b/imgui.ini
@@ -43,14 +43,14 @@ DockId=0x00000007,0
 
 [Window][DockSpace]
 Pos=0,0
-Size=2560,1417
+Size=1440,2537
 Collapsed=0
 
 [Window][Config]
-Pos=0,623
-Size=604,474
+Pos=0,1115
+Size=369,712
 Collapsed=0
-DockId=0x00000025,0
+DockId=0x00000023,0
 
 [Window][sw rasterization]
 Pos=662,557
@@ -164,8 +164,8 @@ Size=338,256
 Collapsed=0
 
 [Window][Scene]
-Pos=0,330
-Size=604,291
+Pos=0,0
+Size=369,1113
 Collapsed=0
 DockId=0x00000022,0
 
@@ -192,34 +192,31 @@ Size=704,779
 Collapsed=0
 
 [Window][Compose Pass]
-Pos=1582,0
-Size=978,707
+Pos=342,1271
+Size=1098,1266
 Collapsed=0
-DockId=0x00000026,0
+DockId=0x00000020,0
 
 [Window][Gizmo Pass]
-Pos=0,0
-Size=604,328
+Size=340,589
 Collapsed=0
 DockId=0x00000021,0
 
 [Window][Gbuffer normal]
-Pos=0,0
-Size=604,328
+Size=340,589
 Collapsed=0
 DockId=0x00000021,1
 
 [Window][Gbuffer depth]
-Pos=1582,709
-Size=978,708
+Pos=0,1967
+Size=340,570
 Collapsed=0
-DockId=0x00000027,0
+DockId=0x00000029,2
 
 [Window][Compute Gbuffer normal]
-Pos=606,711
-Size=974,706
+Size=340,589
 Collapsed=0
-DockId=0x00000024,0
+DockId=0x00000021,2
 
 [Window][Render Pass]
 Pos=606,0
@@ -228,33 +225,59 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Baking Pass]
-Pos=0,1099
-Size=604,318
+Pos=0,1967
+Size=340,570
 Collapsed=0
 DockId=0x00000029,0
 
 [Window][G.I. Compute GBuffer Pass]
-Pos=606,0
-Size=974,709
+Pos=342,0
+Size=1098,1269
 Collapsed=0
-DockId=0x00000023,0
+DockId=0x0000001F,0
 
 [Window][Sample Counter]
-Pos=0,1099
-Size=604,318
+Pos=0,1967
+Size=340,570
 Collapsed=0
 DockId=0x00000029,1
 
+[Window][GBuffer.Normal]
+Pos=371,1193
+Size=1069,1344
+Collapsed=0
+DockId=0x00000027,0
+
+[Window][GBuffer.Depth]
+Pos=0,1829
+Size=369,708
+Collapsed=0
+DockId=0x00000024,1
+
+[Window][Gizmo.RT]
+Pos=0,1829
+Size=369,708
+Collapsed=0
+DockId=0x00000024,0
+
+[Window][Compose.RT]
+Pos=371,0
+Size=1069,1191
+Collapsed=0
+DockId=0x00000026,0
+
 [Docking][Data]
-DockSpace                         ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=2560,1417 Split=X
-  DockNode                        ID=0x00000018 Parent=0x09EF459F SizeRef=604,1387 Split=Y Selected=0x18B8C0DE
+DockSpace                         ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1440,2537 Split=X
+  DockNode                        ID=0x00000018 Parent=0x09EF459F SizeRef=293,1387 Split=Y Selected=0x18B8C0DE
     DockNode                      ID=0x0000001A Parent=0x00000018 SizeRef=1277,621 Split=Y Selected=0xCFB8D5A0
-      DockNode                    ID=0x00000021 Parent=0x0000001A SizeRef=604,328 Selected=0xCFB8D5A0
+      DockNode                    ID=0x00000021 Parent=0x0000001A SizeRef=604,328 Selected=0x519AB3AB
       DockNode                    ID=0x00000022 Parent=0x0000001A SizeRef=604,291 Selected=0x18B8C0DE
     DockNode                      ID=0x0000001B Parent=0x00000018 SizeRef=1277,794 Split=Y Selected=0xD3262A4A
-      DockNode                    ID=0x00000025 Parent=0x0000001B SizeRef=604,474 Selected=0xD3262A4A
-      DockNode                    ID=0x00000029 Parent=0x0000001B SizeRef=604,318 Selected=0x8AAB593D
-  DockNode                        ID=0x00000019 Parent=0x09EF459F SizeRef=1954,1387 Split=Y
+      DockNode                    ID=0x00000025 Parent=0x0000001B SizeRef=604,474 Split=Y Selected=0xD3262A4A
+        DockNode                  ID=0x00000023 Parent=0x00000025 SizeRef=270,312 Selected=0xD3262A4A
+        DockNode                  ID=0x00000024 Parent=0x00000025 SizeRef=270,310 Selected=0x4C3D455D
+      DockNode                    ID=0x00000029 Parent=0x0000001B SizeRef=604,318 Selected=0xAFC7D0D1
+  DockNode                        ID=0x00000019 Parent=0x09EF459F SizeRef=849,1387 Split=Y
     DockNode                      ID=0x00000004 Parent=0x00000019 SizeRef=1920,126 Split=X Selected=0x2B5F260E
       DockNode                    ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
       DockNode                    ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
@@ -275,13 +298,11 @@ DockSpace                         ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=2
               DockNode            ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
                 DockNode          ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=Y Selected=0x961573DF
                   DockNode        ID=0x00000003 Parent=0x00000008 SizeRef=224,256 Split=Y
-                    DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=228,256 Split=X Selected=0x290BE0CE
-                      DockNode    ID=0x0000001F Parent=0x00000001 SizeRef=974,1417 Split=Y Selected=0xE8D97491
-                        DockNode  ID=0x00000023 Parent=0x0000001F SizeRef=974,709 Selected=0xE8D97491
-                        DockNode  ID=0x00000024 Parent=0x0000001F SizeRef=974,706 Selected=0x519AB3AB
-                      DockNode    ID=0x00000020 Parent=0x00000001 SizeRef=978,1417 Split=Y Selected=0x290BE0CE
-                        DockNode  ID=0x00000026 Parent=0x00000020 SizeRef=978,707 CentralNode=1 Selected=0x290BE0CE
-                        DockNode  ID=0x00000027 Parent=0x00000020 SizeRef=978,708 Selected=0xAFC7D0D1
+                    DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=228,256 Split=Y Selected=0xE8D97491
+                      DockNode    ID=0x0000001F Parent=0x00000001 SizeRef=1098,1269 Split=Y Selected=0x2F2B1E91
+                        DockNode  ID=0x00000026 Parent=0x0000001F SizeRef=1069,1191 CentralNode=1 Selected=0x2F2B1E91
+                        DockNode  ID=0x00000027 Parent=0x0000001F SizeRef=1069,1344 Selected=0x00870208
+                      DockNode    ID=0x00000020 Parent=0x00000001 SizeRef=1098,1266 Selected=0x290BE0CE
                     DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=228,254 Selected=0x46B5E99C
                   DockNode        ID=0x0000001E Parent=0x00000008 SizeRef=224,254 Selected=0x593C5C9B
                 DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
