--- a/imgui.ini
+++ b/imgui.ini
@@ -272,6 +272,22 @@ Size=995,762
 Collapsed=0
 DockId=0x0000002A,0
 
+[Window][Compose.RT0]
+Pos=68,493
+Size=456,337
+Collapsed=0
+
+[Window][Compose.RT1]
+Pos=1568,764
+Size=992,653
+Collapsed=0
+DockId=0x0000002C,1
+
+[Window][GBuffer.VPos]
+Pos=493,72
+Size=484,350
+Collapsed=0
+
 [Docking][Data]
 DockSpace                           ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=2560,1417 Split=X
   DockNode                          ID=0x00000018 Parent=0x09EF459F SizeRef=305,1387 Split=Y Selected=0x18B8C0DE
@@ -311,7 +327,7 @@ DockSpace                           ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size
                           DockNode  ID=0x0000002A Parent=0x00000026 SizeRef=995,812 Selected=0xBE496D6E
                         DockNode    ID=0x00000027 Parent=0x0000001F SizeRef=1069,653 Split=X Selected=0x00870208
                           DockNode  ID=0x0000002B Parent=0x00000027 SizeRef=1021,546 Selected=0x00870208
-                          DockNode  ID=0x0000002C Parent=0x00000027 SizeRef=992,546 Selected=0x4C3D455D
+                          DockNode  ID=0x0000002C Parent=0x00000027 SizeRef=992,546 Selected=0x04FB677B
                       DockNode      ID=0x00000020 Parent=0x00000001 SizeRef=1098,1266 Selected=0x290BE0CE
                     DockNode        ID=0x00000002 Parent=0x00000003 SizeRef=228,254 Selected=0x46B5E99C
                   DockNode          ID=0x0000001E Parent=0x00000008 SizeRef=224,254 Selected=0x593C5C9B
